force-app/main/default/objects/Order/fields/Calibration_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Certificate__c</fullName>
    <label>Calibration Certificate</label>
    <description>Whether the order contains calibrated instruments and whether their certificate has been issued.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not applicable</fullName><default>true</default><label>Not applicable</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Issued</fullName><default>false</default><label>Issued</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>