force-app/main/default/objects/Order/fields/Fulfilment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Status__c</fullName>
    <label>Fulfilment Status</label>
    <description>Where the order is in the warehouse-to-door journey. Kept separate from the standard Status picklist, which only knows Draft and Activated.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Processing</fullName><default>true</default><label>Processing</label></value>
            <value><fullName>Awaiting stock</fullName><default>false</default><label>Awaiting stock</label></value>
            <value><fullName>Dispatched</fullName><default>false</default><label>Dispatched</label></value>
            <value><fullName>Delivered</fullName><default>false</default><label>Delivered</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>