force-app/main/default/objects/Order/fields/Items_Summary__c.field-meta.xml
<CustomField>
    <fullName>Items_Summary__c</fullName>
    <label>Items Summary</label>
    <description>One line the agent can read out, e.g. "24 x 250ml borosilicate beakers, 1 x digital thermometer". Stands in for order products in the demo.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>