force-app/main/default/objects/Order/fields/Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference__c</fullName>
    <label>Order Reference</label>
    <description>The reference printed on the customer's confirmation email, e.g. NI-2041. Synthetic data for the Northaven Instruments demo.</description>
    <externalId>true</externalId>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>